# src/models/mod.rs
@@ -12,6 +12,6 @@ pub use balance::{Balance, UpdateBalance};
 pub use merchant::{Merchant, NewMerchant};
 pub use payment::{NewPayment, Payment, UpdatePaymentStatus};
 pub use payment_request::{CreatePaymentRequestRequest, PaymentRequest};
-pub use user::{AuthResponse, LoginRequest, NewUser, SignupRequest, User};
+pub use user::{AuthResponse, LoginRequest, NewUser, SignupRequest, UpdateMeRequest, User};
 pub use wallet::{CreateWalletRequest, NewWallet, Wallet};
 pub use withdrawal::{CreateWithdrawalRequest, NewWithdrawal, Withdrawal};
